== 0.0.3 2008-07-29

* IN PROGRESS
  * Major refactoring of internals

== 0.0.2 2008-07-28

* 1 major enhancement:
  * Actual RubyDocs!

== 0.0.1 2008-07-28

* 1 major enhancement:
  * Initial release
    * Runs tests over all *.txt files.
    * Slight abstraction for compiler and executor.